# charge-filtered-cumulant-residuals

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-DATA  MANIFEST.json  README.md  pyproject.toml  requirements-frozen.txt
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  notebooks.yml  tests.yml
binder/: environment.yml  postBuild
data/: audit_sector_cumulant_results.json  calibration_chemistry.json  screen_sector_audit_r5.json  screen_sector_cumulant_extended.json  screen_sector_cumulant_theorem.json
docs/: claim_index.md  reproducibility.md
notebooks/: 00_overview.ipynb  01_partition_constants.ipynb  02_chemistry_catalog.ipynb  03_implementation_audit.ipynb  04_correlated_calibration.ipynb  05_diagnostic_ucb_demo.ipynb
src/connected_layer_sector/: __init__.py  audit.py  catalog.py  cli.py  constants.py  moments.py  operators.py  partition_lattice.py  seeds.py  states.py
tests/: conftest.py  mutation_check.py  test_audit_results_structure.py  test_calibration.py  test_catalog_corollary.py  test_charge_counting.py  test_constants.py  test_data_integrity.py  test_moments_cumulants.py  test_partition_lattice.py  test_seeds.py  test_smoke_regeneration.py
tools/: check_integrity.py
