[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connected-layer-sector"
version = "0.2.2"
description = "Reproducibility envelope for charge-filtered cumulant residual bounds on U(1)-invariant states."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew Craton", email = "acraton@kootru.com" },
]
maintainers = [
    { name = "Kootru Labs", email = "acraton@kootru.com" },
]
keywords = [
    "quantum-information",
    "quantum-chemistry",
    "cumulant-truncation",
    "fermionic-word-observables",
    "U(1)-symmetry",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbval>=0.11",
    "jupyterlab>=4.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
]
notebooks = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "ipywidgets>=8.0",
]

[project.urls]
Repository = "https://github.com/kootru-repo/charge-filtered-cumulant-residuals"
Issues = "https://github.com/kootru-repo/charge-filtered-cumulant-residuals/issues"
Organization = "https://labs.kootru.com"
DOI = "https://doi.org/10.5281/zenodo.20129665"
Companion = "https://github.com/kootru-repo/cumulant-residual-cert"

[project.scripts]
cls-calibrate = "connected_layer_sector.cli:calibrate"
cls-manifest = "connected_layer_sector.cli:generate_manifest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
connected_layer_sector = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
markers = [
    "slow: marks tests that take more than ~5 seconds",
    "integration: marks pipeline-level integration tests",
]

[tool.coverage.run]
source = ["src/connected_layer_sector"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # let editors handle line length on math-heavy code

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert in tests
"notebooks/*" = ["E", "F"]  # notebooks have their own style
